--- a/CSS/Selectors/CSS_Selectors.html
+++ b/CSS/Selectors/CSS_Selectors.html
@@ -16,8 +16,8 @@
             /* 
              Every child is green now 
             */
-            /* background-color: lightgreen;
-            padding: 10px; */
+            background-color: lightgreen;
+            padding: 10px;
         }
 
         div[class="Holding-Descendant"]>p {
