Learned about Tokens and DOMContentList
Implemented classList methods
.add(), .replace(), .remove(), .toggle()

--- a/JavaScript/DOM/Event Listener.html
+++ b/JavaScript/DOM/Event Listener.html
@@ -56,5 +56,6 @@
         </div>
     </div>
     <script src="Event_Listener.js"></script>
+    <script src="DOM_token_List.js"></script>
 </body>
 </html>
