--- a/ReactJS/Foundations/index_foundations.html
+++ b/ReactJS/Foundations/index_foundations.html
@@ -17,6 +17,34 @@
             border: 2px solid black;
             padding: 10px;
         }
+        #HC{
+            width: 100%;
+            height: 20vh;
+            border: 1px solid grey;
+            padding: 15px;
+            margin: 30px;
+             display: grid;
+            grid-template-columns: 20% 60% 20%;
+        }
+        #logo{
+            margin: 10px;
+            border-radius: 100%;
+            grid-column: 1;
+        }
+
+        #search{
+            margin: 5px;
+            padding:10px;
+            grid-column: 2;
+            width: 90%;
+            align-items: center;
+
+        }
+          #icon{
+            margin: 10px;
+            border-radius: 100%;
+            grid-column: 3;
+        }
     </style>
 </head>
 <body>
