--- a/ReactJS/Building/Project.html
+++ b/ReactJS/Building/Project.html
@@ -9,5 +9,5 @@
 <body>
     <div id="root"></div>
     
-    <script type="module" src="Project.js"></script>
-</body>
+    <script type="module" src="../src/Project.js"></script>
+
