--- a/ReactJS/Notes/notes.html
+++ b/ReactJS/Notes/notes.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <div id="root"></div>
-    <script type="module" src="props.js"></script>
+    <script type="module" src="code.js"></script>
 </body>
 </html>
