--- a/ReactJS/Building/Project.html
+++ b/ReactJS/Building/Project.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link
+    href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+    rel="stylesheet"
+/>
+<!-- <script src="https://cdn.tailwindcss.com"></script> -->
     <link rel="stylesheet" href="Project.css">
 </head>
 <body>
