JS:  Rate Limiters
- Debouncing
- Throttling

--- a/JavaScript/link.html
+++ b/JavaScript/link.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -9,22 +8,10 @@
 </head>
 
 <body>
-    <script src="console_Methods.js">const parent = document.getElementsByClassName("parent")
-console.dirxml(parent)</script>
-    <div class="parent">
-        <div class="children"></div>
-        <div class="children"></div>
-        <div class="children"></div>
-        <div class="children"></div>
-        <div class="children"></div>
-        <div class="children"></div>
-        <div class="children"></div>
-        <div class="children"></div>
-        <div class="children"></div>
-        <div class="children"></div>
-        <h1 class="children"></h1>
-    </div>
-    <h1 class="sibling"></h1>
+    
+    <input type="text" onKeyup="debounced_getResults()"/>
+    <script src="Advance_JS/Debouncing/Code.js"/>
+
 </body>
 
 </html>
